# adscparse

./: LICENSE  README.md  pyproject.toml
sample_data/: adsc_sample.txt
src/adscparse/: __init__.py  cli.py  parser.py
