[project]
name = "adscparse"
version = "0.1.0"
authors = [{ name = "Junzi Sun" }]
description = "A parser for ADSC data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["click", "pandas", "tqdm"]

[project.scripts]
adscparse = "adscparse.cli:main"

[tool.uv]
dev-dependencies = [
    "flake8>=5.0.0",
    "black>=22.12.0",
    "isort>=5.11.4",
    # "mypy>=0.991",
    "pytest>=7.2.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "NPY", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
